--- a/app/src/main/resources/site/pages/user/userEditModal.html
+++ b/app/src/main/resources/site/pages/user/userEditModal.html
@@ -33,6 +33,11 @@
                         <input data-th-value="${user.data.phone} ? ${user.data.phone} : ''" name="phone" type="text"
                             class="input-text" id="phone-user-input" />
                     </div>
+                    <div class="form-group">
+                        <label for="_name-user-input" class="label">URL</label>
+                        <input data-th-value="${user.data._name} ? ${user.data._name} : ''" name="_name" type="text"
+                            class="input-text" id="_name-user-input" />
+                    </div>
                     <input name="id" type="hidden" data-th-value="${user._id}" />
                     <input name="action" type="hidden" value="edit" />
                     <button type="submit" class="modal-btn modal-btn-remove">
