added space filter

--- a/app/src/main/resources/site/pages/games/games.html
+++ b/app/src/main/resources/site/pages/games/games.html
@@ -110,11 +110,11 @@
                         <div class="k_games-filters-item availability">
                             <label class="k_games-filters-label" for="k_games-system-select">Наличие мест</label>
                             <div class="k_games-filters-select select-field">
-                                <select name="system" class="select"
+                                <select name="gameSpace" class="select js_festival-filter-select"
                                     id="k_games-system-select">
                                     <option value="">Все игры</option>
-                                    <option value="free">есть места</option>
-                                    <option value="full">нет мест</option>
+                                    <option value="free">Есть свободные места</option>
+                                    <option value="full">Мест больше нет</option>
                                 </select>
                             </div>
                         </div>
