attachment part refactoring, added attachment to article editor

--- a/app/src/main/resources/services/newArticle/newArticleNew.html
+++ b/app/src/main/resources/services/newArticle/newArticleNew.html
@@ -85,8 +85,12 @@
                                         Видео
                                     </div>
                                     <div
-                                        class="create_article-add_content-action icon-quote  js_add-blockquote js_new-part">
+                                        class="create_article-add_content-action icon-quote js_add-blockquote js_new-part">
                                         Цитату
+                                    </div>
+                                    <div
+                                        class="create_article-add_content-action icon-quote js_add-attachment js_new-part">
+                                        Файл
                                     </div>
                                 </div>
                             </div>
