fixed missing track num

--- a/app/src/main/resources/services/newArticle/newArticleNew.html
+++ b/app/src/main/resources/services/newArticle/newArticleNew.html
@@ -89,7 +89,7 @@
                                         Цитату
                                     </div>
                                     <div
-                                        class="create_article-add_content-action icon-quote js_add-attachment js_new-part">
+                                        class="create_article-add_content-action icon-quote js_add-attachment js_new-part hidden">
                                         Файл
                                     </div>
                                 </div>
