added color schemes

--- a/app/src/main/resources/admin/statistics/statistics.html
+++ b/app/src/main/resources/admin/statistics/statistics.html
@@ -66,6 +66,7 @@
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script data-th-src="${portal.assetUrl({'_path=/js/chartjs-plugin-colorschemes.min.js'})}"></script>
     <footer class="footer" data-th-utext="${pageComponents.footer}"></footer>
 </body>
 
