added donation sum to view

--- a/app/src/main/resources/admin/donatepay/donations.html
+++ b/app/src/main/resources/admin/donatepay/donations.html
@@ -16,6 +16,13 @@
     </div>
     <div class="table-body_cell table-side_aligns">
         <span class="label">
+            Сумма
+        </span>
+        <span class="value" data-th-text="${donation.sum}">
+        </span>
+    </div>
+    <div class="table-body_cell table-side_aligns">
+        <span class="label">
             Дата
         </span>
         <span class="value" data-th-text="${donation.date}">
