--- a/app/src/main/resources/admin/donatepay/wrapper.html
+++ b/app/src/main/resources/admin/donatepay/wrapper.html
@@ -17,6 +17,9 @@
                         <span class="label">Комментарий</span>
                     </div>
                     <div class="table-header_cell">
+                        <span class="label">Сумма</span>
+                    </div>
+                    <div class="table-header_cell">
                         <span class="label">Дата</span>
                     </div>
                 </div>
